rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__common_sql_generation__diamond_join_over_direct_path_sql.snap
---
source: cubesqlplanner/src/tests/common_sql_generation.rs
expression: result
---
cube_c__code | cube_a__count
-------------+--------------
C001         | 3            
C003         | 1            
C002         | 1
