rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__common_sql_generation__segment_as_dimension_in_pre_aggregation_query.snap
---
source: cubesqlplanner/src/tests/common_sql_generation.rs
expression: sql
---
SELECT (city = 'New York') "new_york", count(COUNT(*)) "customers__count" 
FROM  customers  AS "customers"
GROUP BY 1
