rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__common_sql_generation__simple_join_sql.snap
---
source: cubesqlplanner/src/tests/common_sql_generation.rs
expression: sql
---
SELECT "cube_c".code "cube_c__code", count(COUNT(*)) "cube_a__count" 
FROM  table_a  AS "cube_a"
LEFT JOIN  table_c  AS "cube_c" ON "cube_a".c_id = "cube_c".id
GROUP BY 1
ORDER BY  2  DESC
