rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__common_sql_generation__simple_segment_sql.snap
---
source: cubesqlplanner/src/tests/common_sql_generation.rs
expression: result
---
customers__count
----------------
2
